--- a/PassionProjectSummer2024/Views/Department/Details.cshtml
+++ b/PassionProjectSummer2024/Views/Department/Details.cshtml
@@ -16,7 +16,8 @@
 <span>
 <a class="btn btn-danger me-3" href="/Department/DeleteConfirm/@Model.SelectedDepartment.DepartmentId">Delete Department</a>
 <a class="btn btn-warning me-3" href="/Department/Edit/@Model.SelectedDepartment.DepartmentId">Update Department</a>
-<img src="~/Content/Images/Peccy600.png" class="rounded float-end image-overlay" />
+    <!--image source:https://www.amswagstore.com/images/pins/Peccy600.png-->
+<img src="~/Content/Images/Peccy600.png" class="rounded float-end image-overlay"  alt="Amazon peccy pins Clipart"/>
 </span>
 <div class="container-fluid  p-5 d-inline-block text-start text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
     <div class="container ">
