--- a/PassionProjectSummer2024/Views/Employee/Details.cshtml
+++ b/PassionProjectSummer2024/Views/Employee/Details.cshtml
@@ -11,15 +11,15 @@
 <a  class="btn btn-warning" href="/Employee/Edit/@Model.EmployeeId" >Update Employee</a>
 </span>
 <div class="container text-center mt-5">
-    
-        <img src="~/Content/Images/hero.png" height="350" width="300" class="rounded col float-start" />
-        <div class="p-5  d-inline-block text-start text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
-            <p class="mb-2 fs-4"><strong>First Name : </strong>@Model.FirstName </p>
-            <p class="mb-2 fs-4"><strong>Last Name : </strong>@Model.LastName </p>
-            <p class="mb-2 fs-4"><strong>Employee Id : </strong>@Model.EmployeeId </p>
-            <p class="mb-2 fs-4"><strong>Hire Date : </strong>@Model.HireDate </p>
-            <p class="mb-2 fs-4"><strong>Department Name : </strong>@Model.DepartmentName </p>
-            <p class="mb-2 fs-4"><strong>Position Title : </strong>@Model.PositionTitle </p>
-        </div>
-   
+    <!--image source:https://i.ebayimg.com/images/g/VdsAAOSwiFJj5VV9/s-l1200.webp-->
+    <img src="~/Content/Images/hero.png" height="350" width="300" class="rounded col float-start" alt="amazon Peccy Pins clipart" />
+    <div class="p-5  d-inline-block text-start text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+        <p class="mb-2 fs-4"><strong>First Name : </strong>@Model.FirstName </p>
+        <p class="mb-2 fs-4"><strong>Last Name : </strong>@Model.LastName </p>
+        <p class="mb-2 fs-4"><strong>Employee Id : </strong>@Model.EmployeeId </p>
+        <p class="mb-2 fs-4"><strong>Hire Date : </strong>@Model.HireDate </p>
+        <p class="mb-2 fs-4"><strong>Department Name : </strong>@Model.DepartmentName </p>
+        <p class="mb-2 fs-4"><strong>Position Title : </strong>@Model.PositionTitle </p>
+    </div>
+
 </div>
