--- a/PassionProjectSummer2024/Views/Position/Details.cshtml
+++ b/PassionProjectSummer2024/Views/Position/Details.cshtml
@@ -16,8 +16,8 @@
 <span>
     <a class="btn btn-danger me-3" href="/Position/DeleteConfirm/@Model.SelectedPosition.PositionId">Delete Position</a>
     <a class="btn btn-warning" href="/Position/Edit/@Model.SelectedPosition.PositionId">Update Position</a>
-
-    <img src="~/Content/Images/Peccy600.png" class="rounded float-end image-overlay" />
+    <!--image source:https://www.amswagstore.com/images/pins/Peccy600.png-->
+    <img src="~/Content/Images/Peccy600.png" class="rounded float-end image-overlay" alt="Amazon Peccy pins clipart"/>
 </span>
 <div class="container-fluid  p-5 d-inline-block text-start text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
     <div class="container ">
