--- a/PassionProjectSummer2024/Views/Home/Index.cshtml
+++ b/PassionProjectSummer2024/Views/Home/Index.cshtml
@@ -35,7 +35,8 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="~/Content/Images/succes.jpeg" class="d-block w-100 vh-100" alt="...">
+                <!--img source: https://assets.aboutamazon.com/dims4/default/0e5c754/2147483647/strip/false/crop/2000x1333+0+0/resize/1486x990!/quality/90/?url=https%3A%2F%2Famazon-blogs-brightspot.s3.amazonaws.com%2Ff4%2F71%2F1ffd4cdb4d35bd165b253c14e9b0%2F20181003fccommunitygiving-blog-17.JPG-->
+                <img src="~/Content/Images/succes.jpeg" class="d-block w-100 vh-100" alt=" happy amazon employees">
             </div>
             <div class="carousel-item">
                 <img src="~/Content/Images/diversity.jpg" class="d-block w-100 vh-100" alt="...">
