--- a/PassionProjectSummer2024/Views/Shared/_Layout.cshtml
+++ b/PassionProjectSummer2024/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            
-                <img src="~/Content/Images/logo.png" height="40" width="40" class="me-3" alt="">
-            
+            <!--image source:https://static-00.iconduck.com/assets.00/amazon-icon-1024x1024-7lg9cyjs.png-->
+            <img src="~/Content/Images/logo.png" height="40" width="40" class="me-3" alt="amazon logo">
+
             @Html.ActionLink("Amazon Workplace", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
